# backend-nest/src/note/note.controller.ts
@@ -1,11 +1,11 @@
-import { Body, Controller, Get, HttpCode, Param, Post, Put, Query, UseGuards } from "@nestjs/common";
+import { Body, Controller, Delete, Get, HttpCode, Param, Post, Put, Query, UseGuards } from "@nestjs/common";
 import { NoteService } from "./note.service";
 import { ObjectCheckingGuard } from "./guard/object-checking.guard";
 import { UpdateNoteDto } from "./dto";
 import { INoteResponse, INotesResponse } from "./interface/note-response.interface";
-import { ApiBadRequestResponse, ApiBearerAuth, ApiBody, ApiCreatedResponse, ApiDefaultResponse, ApiNotFoundResponse, ApiOkResponse, ApiOperation, ApiParam, ApiTags, ApiUnauthorizedResponse } from "@nestjs/swagger";
-import { DefaultError, DeleteItemBody, NoteResponse, NotesResponse, ObjectIdError, ObjNotExistError, SuccessResponse, UnauthorizedError } from "@src/common/swagger";
-import { DeleteItemDto, QueryDto } from "@src/common/dto";
+import { ApiBadRequestResponse, ApiBearerAuth, ApiCreatedResponse, ApiDefaultResponse, ApiNotFoundResponse, ApiOkResponse, ApiOperation, ApiParam, ApiTags, ApiUnauthorizedResponse } from "@nestjs/swagger";
+import { DefaultError, NoteResponse, NotesResponse, ObjectIdError, ObjNotExistError, SuccessResponse, UnauthorizedError } from "@src/common/swagger";
+import { QueryDto } from "@src/common/dto";
 import { AccessGuard } from "@src/auth/guard";
 import { User } from "@src/common/decorator";
 
@@ -37,7 +37,7 @@ export class NoteController {
    @ApiUnauthorizedResponse({ description: "Unauthorized", type: UnauthorizedError })
    @ApiDefaultResponse({ description: "Unexpected errors", type: DefaultError })
    @UseGuards(AccessGuard)
-   @Get("add")
+   @Post("add")
    async addNote(
       @User("userId") userId: string): Promise<INoteResponse> {
 
@@ -54,10 +54,10 @@ export class NoteController {
    @ApiNotFoundResponse({ description: "Not found", type: ObjNotExistError })
    @UseGuards(AccessGuard)
    @UseGuards(ObjectCheckingGuard)
-   @Get(':noteId')
+   @Get(":noteId")
    async getNote(
-      @Param('noteId') noteId: string) {
-      return this.noteService.getNote(noteId)
+      @Param("noteId") noteId: string) {
+      return this.noteService.getNote(noteId);
    }
 
    // Update note
@@ -78,10 +78,9 @@ export class NoteController {
       return this.noteService.updateNote(noteId, dto);
    }
 
-   // Send prev request params and delete note
-   @ApiOperation({ summary: "send prev request params and delete note by id" })
+   // Delete note
+   @ApiOperation({ summary: "delete note by id" })
    @ApiParam({ name: "noteId", description: "note id", example: "63dfe16eda233c96fc6e2604" })
-   @ApiBody({ type: DeleteItemBody, required: false })
    @ApiOkResponse({ description: "Success", type: NotesResponse })
    @ApiUnauthorizedResponse({ description: "Unauthorized", type: UnauthorizedError })
    @ApiDefaultResponse({ description: "Unexpected errors", type: DefaultError })
@@ -90,13 +89,13 @@ export class NoteController {
    @HttpCode(200)
    @UseGuards(AccessGuard)
    @UseGuards(ObjectCheckingGuard)
-   @Post(":noteId")
+   @Delete(":noteId")
    async deleteNote(
       @User("userId") userId: string,
-      @Body() dto: DeleteItemDto,
+      @Query() queryDto: QueryDto,
       @Param("noteId") noteId: string): Promise<INotesResponse> {
 
-      return this.noteService.deleteNote(noteId, userId, dto.limit, dto.searchKey);
+      return this.noteService.deleteNote(noteId, userId, queryDto);
    }
 
 }
